==================== 2.26.0 ======================

==================== 2.25.92 ======================

==================== 2.25.91 ======================

==================== 2.25.90 ======================

==================== 2.25.3 ======================

==================== 2.25.2 ======================

2008-12-17  William Jon McCann  <jmccann@redhat.com>

	* Makefile.am: Add missing libgnomeui CFLAGS
	Patch from: lucasr.at.mundo@gmail.com
	(Bug #564192)

2008-09-30  Callum McKenzie  <callum@spooky-possum.org>

	* drive-button.c (mount_drive): Patch to support mounts that
	require authentication. Patch from Matthias Clasen (bug 5539960).
	(run_command): Remove a return from a void function (reported by
	Migi, bug 554277).
	(eject_drive): Supply typecasts to callbacks to avoid compiler
	warnings.
	(open_drive): Supply an extra NULL argument to the dialog creation
	function to avoid a compiler warning from the
	ill-defined-at-compile time format string.

==================== 2.24.0.1 ====================

2008-09-15  Callum McKenzie  <callum@spooky-possum.org>

	* drive-button.c: Replace the calls to
	g_volume_get_activation_root since they don't appear to be working
	properly. The "Play DVD" button now comes up correctly.

2008-09-13  Callum McKenzie  <callum@spooky-possum.org>

	* drive-button.c (eject_finish): Avoid a crash on eject by
	supplying a callback. Bug 551669. This seems to be a work-around
	for a glib error.

2008-09-03  Callum McKenzie  <callum@spooky-possum.org>

	* drive-button.c:
	* drive-list.c:
	* drive-button.h:
	* drive-list.h:
	* drivemount.c: Port to GIO. Work done by Pierre Ossman. Bug
	#543711.

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* GNOME_DriveMountApplet.server.in.in: Patch from Alex Jones to
	stop the drivemount applet failing to load on the second
	log-in. (Bug #471889)

2007-08-22  Callum McKenzie  <callum@spooky-possum.org>

	* drive-button.c (drive_button_update): Moved declaration to be